Add a server infomation dialog which appears if there is not channel list file

--- a/BonDriver_TCPc.vcxproj.filters
+++ b/BonDriver_TCPc.vcxproj.filters
@@ -26,5 +26,13 @@
     <ClInclude Include="IBonDriver2.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resource.rc">
+      <Filter>リソース ファイル</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
