--- a/BonDriver_TCPc.vcxproj
+++ b/BonDriver_TCPc.vcxproj
@@ -83,6 +83,10 @@
   <ItemGroup>
     <ClInclude Include="IBonDriver.h" />
     <ClInclude Include="IBonDriver2.h" />
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
